--- a/Flask/Proyecto now/templates/Generar_ticket.html
+++ b/Flask/Proyecto now/templates/Generar_ticket.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>CSS Grid Template 10</title>
+<title>Generar Ticket</title>
 <link rel="stylesheet" href="static/css/estilo.css">
 <body>
   <header  id="pageHeader">Generador de Tickets</header>
@@ -54,10 +54,12 @@
   <nav id="mainNav">
     <b>Navegador</b>
     <ul>
+      <li><a href="Index.html">Index</a></li>
       <li>Generar nuevo ticket</li>
       <li>Editar ticket existente</li>
       <li>Cerrar ticket</li>
       <li></li>
+      <li><a href="Vista.html">Ver consulta</a></li>
       <li>Informe ticket abiertos</li>
       <li>Informe ticket ticket cerrados</li>
     </ul>
