--- a/Flask/Proyecto now/templates/Modelo.html
+++ b/Flask/Proyecto now/templates/Modelo.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<title>Ticket generador V1.0</title>
+<title>Index</title>
 
 <link rel="stylesheet" href="static/css/estilo.css">
 <body>
@@ -16,10 +16,12 @@
   <nav id="mainNav">
     <b>Navegador</b>
     <ul>
-      <li><a href="Generar_ticket.html"></a>Generar nuevo ticket</li>
+      <li><a href="Index.html">Index</a></li>
+      <li><a href="Generar_ticket.html">Generar nuevo ticket</a></li>
       <li>Editar ticket existente</li>
       <li>Cerrar ticket</li>
       <li></li>
+      <li><a href="Vista.html">Ver consulta</a></li>
       <li>Informe ticket abiertos</li>
       <li>Informe ticket ticket cerrados</li>
     </ul>
