--- a/Flask/Proyecto now/templates/Vista.html
+++ b/Flask/Proyecto now/templates/Vista.html
@@ -1,25 +1,27 @@
 <!doctype html>
-<title>Ticket generador V1.0</title>
-
+<title>Vista</title>
 <link rel="stylesheet" href="static/css/estilo.css">
 <body>
   <header  id="pageHeader">Generador de Tickets</header>
   <article id="mainArticle">
+    <p># Generar nuevo ticket</p>
+
+    <p font-size:30pt; color: rgb(250, 217, 217);>Bienvenido al sistema de Generacion de Ticket</p>
     
-    <p>.</p>
-    <car>Bienvenido al sistema de Generacion de Ticket</car>
-    <p>.</p>
-    <p>.</p>
-    <p>Usar menu lateral para ir a las diferentes paginas</p>
+    <h1>Prinfecha = {{Prinfecha}}</h1>
+    <h1>Printicket = {{Printicket}}</h1>
+    
 
     </article>
   <nav id="mainNav">
     <b>Navegador</b>
     <ul>
-      <li><a href="/templates/Generar_ticket.html">Generar nuevo ticket</a></li>
+      <li><a href="Index.html">Index</a></li>
+      <li><a href="Generar_ticket.html">Generar nuevo ticket</a></li>
       <li>Editar ticket existente</li>
       <li>Cerrar ticket</li>
       <li></li>
+      <li>Ver consulta</li>
       <li>Informe ticket abiertos</li>
       <li>Informe ticket ticket cerrados</li>
     </ul>
