--- a/Flask/Proyecto now/templates/Index.html
+++ b/Flask/Proyecto now/templates/Index.html
@@ -1,29 +1,33 @@
 <!doctype html>
-<title>CSS Grid Template 10</title>
-<link rel="stylesheet" href="./css/nuevo2_css.css">
+<title>Index</title>
+
+<link rel="stylesheet" href="static/css/estilo.css">
 <body>
   <header  id="pageHeader">Generador de Tickets</header>
   <article id="mainArticle">
-    <p># Generar nuevo ticket</p>
-
-    <p font-size:30pt; color: rgb(250, 217, 217);>Bienvenido al sistema de Generacion de Ticket</p>
     
-    
+    <p>.</p>
+    <car>Bienvenido al sistema de Generacion de Ticket</car>
+    <p>.</p>
+    <p>.</p>
+    <p>Usar menu lateral para ir a las diferentes paginas</p>
 
     </article>
   <nav id="mainNav">
     <b>Navegador</b>
     <ul>
-      <li>Generar nuevo ticket</li>
+      <li>Index</li>
+      <li><a href="Generar_ticket.html">Generar nuevo ticket</a></li>
       <li>Editar ticket existente</li>
       <li>Cerrar ticket</li>
       <li></li>
+      <li><a href="Vista.html">Ver consulta</a></li>
       <li>Informe ticket abiertos</li>
       <li>Informe ticket ticket cerrados</li>
     </ul>
   </nav>
   <div id="siteAds">
-    <img width:50%; src="./images/logo.png">
+    <img width:50%; src="static/images/logo.png">
   </div>
   <footer id="pageFooter">Sistema interno de generacion ticket a Servicio Tecnico</footer>
 </body>
