--- a/Flask/Proyecto_now - copia/templates/Modelo.html
+++ b/Flask/Proyecto_now - copia/templates/Modelo.html
@@ -43,12 +43,21 @@
       <!-- CUERPO SUPERIOR -->
       <section>
         <article>
-          <h2></h2>
+          <h2>Cuerpo superior</h2>
+          <address>
+          Admin, domainname.com
+          </address>
+          <time datetime="2012-04-06T08:15+00:00">Friday, 6<sup>th</sup> April 2012 @08:15:00</time>
+          <p>This is a W3C compliant free website template from <a href="https://www.os-templates.com/" title="Free Website Templates">OS Templates</a>. For full terms of use of this template please read our <a href="https://www.os-templates.com/template-terms">website template licence</a>.</p>
+          <p>You can use and modify the template for both personal and commercial use. You must keep all copyright information and credit links in the template and associated files. For more HTML5 templates visit <a href="https://www.os-templates.com/">free website templates</a>.</p>
           
-          <article><img src="../static/images/monitoreo3.png" alt="">
-
           <p>&nbsp;</p>
-           
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          
           
           
           <p style="margin-left: 350px;"><span style="font-size:9px;">Por favor utilice el indice izquierdo para poder navegar por el sistema</span></p>
@@ -76,12 +85,12 @@
       <h2 class="title">Links</h2>
       <nav>
         <ul>
-          <li><a href="#"; style="color:rgb(161, 11, 149)">Index</a></li>
+          <li><a href="Generar_ticket.html">Index</a></li>
           <li><a href="#">Generar nuevo ticket</a></li>
           <li><a href="#">Editar ticket existente</a></li>
           <li><a href="#">Cerrar ticket</a></li>
           <p>&nbsp;</p>
-          <li class="last"><a href="Vista.html">Ver consulta</a></li>
+          <li class="last"><a href="#">Ver consulta</a></li>
           <li class="last"><a href="#">Informe tickets abiertos</a></li>
           <li class="last"><a href="#">Informe tickets cerrados</a></li>
         </ul>
