--- a/Flask/Proyecto_now - copia/templates/Vista.html
+++ b/Flask/Proyecto_now - copia/templates/Vista.html
@@ -43,12 +43,27 @@
       <!-- CUERPO SUPERIOR -->
       <section>
         <article>
-          <h2></h2>
-          
-          <article><img src="../static/images/monitoreo3.png" alt="">
-
+          <h2>Vista Tickets</h2>
+          <address>
+          Dato de la consulta
+          </address>
           <p>&nbsp;</p>
-           
+          <h1>Id = {{Prin_id}}</h1>
+          <h1>Ticket = {{Prin_ticket}}</h1>
+          <h1>Detalle = {{Prin_detalle}}</h1>
+          <h1>Fecha = {{Prin_fecha}}</h1>
+          <h1>Area = {{Prin_area_id}}</h1>
+          <h1>Cliente = {{Prin_cliente_id}}</h1>
+          
+          
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <form action="button">
+            <button type="submit">Press Button!</button>
+          <form>
+         
+          
           
           
           <p style="margin-left: 350px;"><span style="font-size:9px;">Por favor utilice el indice izquierdo para poder navegar por el sistema</span></p>
@@ -76,12 +91,12 @@
       <h2 class="title">Links</h2>
       <nav>
         <ul>
-          <li><a href="#"; style="color:rgb(161, 11, 149)">Index</a></li>
+          <li><a href="Index.html">Index</a></li>
           <li><a href="#">Generar nuevo ticket</a></li>
           <li><a href="#">Editar ticket existente</a></li>
           <li><a href="#">Cerrar ticket</a></li>
           <p>&nbsp;</p>
-          <li class="last"><a href="Vista.html">Ver consulta</a></li>
+          <li class="last"><a href="#"; style="color:rgb(161, 11, 149)">Ver consulta</a></li>
           <li class="last"><a href="#">Informe tickets abiertos</a></li>
           <li class="last"><a href="#">Informe tickets cerrados</a></li>
         </ul>
