--- a/Flask/Proyecto_now/templates/Login.html
+++ b/Flask/Proyecto_now/templates/Login.html
@@ -43,12 +43,19 @@
       <!-- CUERPO SUPERIOR -->
       <section>
         <article>
-          <h2></h2>
+          <h2>Cuerpo superior</h2>
+          <form method="post" action="{{ url_for('login') }}">
+            <p><input name="username" type="text"></p>
+            <input type="submit" value="Log In">
+          </form>
           
-          <article><img src="../static/images/monitoreo3.png" alt="">
-
           <p>&nbsp;</p>
-           
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          <p>&nbsp;</p>
+          
           
           
           <p style="margin-left: 350px;"><span style="font-size:9px;">Por favor utilice el indice izquierdo para poder navegar por el sistema</span></p>
@@ -76,12 +83,12 @@
       <h2 class="title">Links</h2>
       <nav>
         <ul>
-          <li><a href="#"; style="color:rgb(161, 11, 149)">Index</a></li>
+          <li><a href="Generar_ticket.html">Index</a></li>
           <li><a href="#">Generar nuevo ticket</a></li>
           <li><a href="#">Editar ticket existente</a></li>
           <li><a href="#">Cerrar ticket</a></li>
           <p>&nbsp;</p>
-          <li class="last"><a href="Vista.html">Ver consulta</a></li>
+          <li class="last"><a href="#">Ver consulta</a></li>
           <li class="last"><a href="#">Informe tickets abiertos</a></li>
           <li class="last"><a href="#">Informe tickets cerrados</a></li>
         </ul>
